--- a/linio/main/static/style.css
+++ b/linio/main/static/style.css
@@ -14,6 +14,8 @@ input:focus-visible {
 
 main {
     margin-top: 67px;
+    margin-right: 5%;
+    margin-left: 5%;
 }
 
 .filter-busqueda {
@@ -41,6 +43,10 @@ main {
     color: white;
 }
 
+.linio-home-carousel {
+    object-fit: cover;
+    height: 325px;
+}
 /* END BASE*/
 
 
