--- a/linio/main/templates/main/home.html
+++ b/linio/main/templates/main/home.html
@@ -6,22 +6,57 @@
     <hr>
     {% if busqueda %}
         <p>Mostrando resultados para "<span class="filter-busqueda">{{ query }}</span>"</p>
+
+    {% else %}
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="linio-home-carousel d-block w-100" src="{% static 'img/carousel1.jpg' %}" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="linio-home-carousel d-block w-100" src="{% static 'img/carousel2.jpg' %}" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="linio-home-carousel d-block w-100" src="{% static 'img/carousel3.jpg' %}" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
     {% endif %}
 
-
-    <h5> Ultimos productos </h5>
-    <ul>
+    <h5 class="mt-5"> Ultimos productos </h5>
+    <div class="product">
       {% for producto in latest_products %}
-        <li>
-          <a href="{% url 'product-detail' producto.pk %}">
-            {{ producto.nombre }}
-          </a>
-          - {{ producto.precio }}
-        </li>
+        <div class="product-item mx-2 mt-5">
+            <a class="product-item-link" href="{% url 'product-detail' producto.pk %}">
+            <div class="product-item-img">
+                <img src="" alt="">
+            </div>
+                <div class="mx-2">
+                    <div class="d-table">
+                        <h5 class="product-item-name-sub">{{ producto.nombre }}</h5>
+                    </div>
+                    <h6>S/ {{ producto.precio }}</h6>
+                </div>
+            </a>
+        </div>
       {% empty %}
         <li>Aun no hay productos disponibles.</li>
       {% endfor %}
-    </ul>
+    </div>
+
     <hr>
     <ul>
       <li><a href="{% url 'product-list' %}">Ver Lista de Productos Completa</a></li>
