--- a/linio/main/templates/main/producto_list.html
+++ b/linio/main/templates/main/producto_list.html
@@ -5,24 +5,36 @@
  <h1> LinioExp </h1>
     <hr>
     <h3> Productos </h3>
-    <div class="product">
-      {% for producto in object_list %}
-        <div class="product-item mx-2 mt-5">
-            <a class="product-item-link" href="{% url 'product-detail' producto.pk %}">
-            <div class="product-item-img">
-                <img src="" alt="">
+    <div class="container-fluid">
+        <div class="row mt-5">
+            <div class="col-2">
+                <h4 class="mb-4">Categorías</h4>
+                {% for categoria in categorias %}
+                <p>({{ categoria.cantidad_productos }}) {{ categoria.nombre }}</p>
+                {% endfor %}
             </div>
-                <div class="mx-2">
-                    <div class="d-table">
-                        <h5 class="product-item-name-sub">{{ producto.nombre }}</h5>
+            <div class="col-10 product">
+              {% for producto in object_list %}
+                <div class="product-item mx-1 mb-3">
+                    <a class="product-item-link" href="{% url 'product-detail' producto.pk %}">
+                    <div class="product-item-img">
+                        <img src="" alt="">
                     </div>
-                    <h6>S/ {{ producto.precio }}</h6>
+                        <div class="mx-2">
+                            <div class="d-table">
+                                <h5 class="product-item-name-sub">{{ producto.nombre }}</h5>
+                            </div>
+                            <h6>S/ {{ producto.precio }}</h6>
+                        </div>
+                    </a>
                 </div>
-            </a>
+              {% empty %}
+                <li>Aun no hay productos disponibles.</li>
+              {% endfor %}
+
+            </div>
+
         </div>
-      {% empty %}
-        <li>Aun no hay productos disponibles.</li>
-      {% endfor %}
     </div>
     <hr>
 {% endblock %}
