--- a/linio/main/templates/main/producto_detail.html
+++ b/linio/main/templates/main/producto_detail.html
@@ -6,7 +6,7 @@
     <hr>
     <h3> {{ object.nombre }} </h3>
     <ul>
-      <li><strong>Precio:</strong> {{ object.precio }}</li>
+      <li><strong>Precio:</strong> S/ {{ object.precio|floatformat:"2g" }}</li>
       <li><strong>Descripcion:</strong> {{ object.descripcion }}</li>
       <li><strong>Categoria:</strong> {{ object.categoria.nombre }}</li>
       <li><strong>Proveedor:</strong> {{ object.proveedor }}</li>
