--- a/linio/main/templates/main/home.html
+++ b/linio/main/templates/main/home.html
@@ -44,7 +44,7 @@
             <div class="product-item-img">
                 <img src="" alt="">
             </div>
-                <div class="mx-2">
+                <div class="mx-2 pb-3">
                     <div class="d-table">
                         <h5 class="product-item-name-sub">{{ producto.nombre }}</h5>
                     </div>
