--- a/linio/main/templates/main/producto_detail.html
+++ b/linio/main/templates/main/producto_detail.html
@@ -12,4 +12,12 @@
       <li><strong>Proveedor:</strong> {{ object.proveedor }}</li>
     </ul>
     <hr>
+    <div class="block">
+        <a href="{% url 'add-to-cart' product_pk=object.pk %}" class='button is-primary'>
+          Añadir al carrito
+        </a>
+        <a href="{% url 'pedido-detail' %}" class='button'>
+          Ver carrito
+        </a>
+    </div>
 {% endblock %}
