--- a/linio/main/templates/main/producto_detail.html
+++ b/linio/main/templates/main/producto_detail.html
@@ -1,23 +1,40 @@
 {% extends "base.html" %}
-{% load static %}
-
 {% block content %}
     <h1> Linio Exp </h1>
     <hr>
     <h3> {{ object.nombre }} </h3>
+    <div class="columns">
+    {% for image in object.images.all %}
+    <div class="column is-3">
+        <figure class="image is-square">
+            <a href="{{ image.image.url }}">
+                <img src="{{ image.image.url }}" alt="No hay imagen disponible">
+            </a>
+        </figure>
+    </div>
+    {% empty %}
+    <div class="column content">
+        <p>Aún no hay imágenes disponibles</p>
+    </div>
+    {% endfor %}
+    </div>
     <ul>
       <li><strong>Precio:</strong> S/ {{ object.precio|floatformat:"2g" }}</li>
-      <li><strong>Descripcion:</strong> {{ object.descripcion }}</li>
+      <li style="text-align: justify"><strong>Descripcion:</strong> {{ object.descripcion }}</li>
       <li><strong>Categoria:</strong> {{ object.categoria.nombre }}</li>
       <li><strong>Proveedor:</strong> {{ object.proveedor }}</li>
     </ul>
     <hr>
     <div class="block">
-        <a href="{% url 'add-to-cart' product_pk=object.pk %}" class='button is-primary'>
-          Añadir al carrito
-        </a>
-        <a href="{% url 'pedido-detail' %}" class='button'>
-          Ver carrito
-        </a>
+    <a href="{% url 'add-to-cart' product_pk=object.pk %}" class='button is-primary'>
+      Añadir al carrito
+    </a>
+    <a href="{% url 'pedido-detail' %}" class='button'>
+      Ver carrito
+    </a>
     </div>
+    <ul>
+      <li><a href="{% url 'product-list' %}">Ver Lista de Productos</a></li>
+      <li><a href="{% url 'home' %}">Inicio</a></li>
+    </ul>
 {% endblock %}
