--- a/linio/main/templates/base.html
+++ b/linio/main/templates/base.html
@@ -38,7 +38,7 @@
                 <li class="nav-item active">
                     <form method="get">
                         <input class="nav-search-input" placeholder="Buscar productos" type="text" name="q" id="buscar">
-                        <button class="nav-search-button" type="submit"><i class="fas fa-search"></i></button>
+                        <button class="nav-search-button" type="submit" style="margin-top: 1px"><i class="fas fa-search"></i></button>
                     </form>
                 </li>
                 <div class="navbar-nav ml-auto">
