--- a/linio/main/templates/base.html
+++ b/linio/main/templates/base.html
@@ -47,7 +47,7 @@
                     {% if user.profile.colaborador.is_colaborador %}
                     <div class="d-flex">
                         <i class="far fa-user-circle"></i>
-                        <p class="mx-4"><a href="{% url 'logout' %}">Añadir producto</a></p>
+                        <p class="mx-4"><a href="{% url 'createProduct' %}">Añadir producto</a></p>
                     </div>
                     {% endif %}
                     <div class="d-flex">
