--- a/linio/main/templates/base.html
+++ b/linio/main/templates/base.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <!--Begin NavBar-->
-    <nav class="navbar navbar-expand-md navbar-light fixed-top">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top" style="position: fixed !important">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,7 +47,11 @@
                     {% if user.profile.colaborador.is_colaborador %}
                     <div class="d-flex">
                         <i class="far fa-user-circle"></i>
-                        <p class="mx-4"><a href="{% url 'createProduct' %}">Añadir producto</a></p>
+                        <p class="mx-4"><a href="{% url 'allmyproducts' %}">Todos mis productos</a></p>
+                    </div>
+                    <div class="d-flex">
+                        <i class="far fa-user-circle"></i>
+                        <p class="mx-4"><a href="{% url 'addproduct' %}">Añadir producto</a></p>
                     </div>
                     {% endif %}
                     <div class="d-flex">
