--- a/linio/main/templates/main/borrar_producto.html
+++ b/linio/main/templates/main/borrar_producto.html
@@ -3,11 +3,11 @@
 
 {% block content %}
 
-<form method="POST">
+<form action="{% url 'deleteproduct' producto.id %}" method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
     <input type="submit" name="submit">
 
 </form>
+
 
 {% endblock %}
